--- a/src/style.css
+++ b/src/style.css
@@ -35,11 +35,78 @@ h1 {
   padding:11px 11px 11px 0px;
 }
 
-button {
-  padding: 5px 9px 5px 9px;
-  border-radius: 3px;
-  font-size: 18px;
-  border: 1px solid #0091CE;
-  background-color: #0091CE;
-  color: #fff;
+
+
+div.dtsp-verticalContainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  align-items: flex-start;
+}
+
+div.dtsp-verticalContainer div.dtsp-verticalPanes,
+div.dtsp-verticalContainer div.container{
+  width: 30%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 0;
+}
+
+div.dtsp-verticalContainer div.dtsp-verticalPanes{
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 26%;
+}
+
+div.dtsp-verticalPanes {
+  margin-right: 20px;
+}
+
+div.dtsp-title {
+  margin-right: 0px !important;
+  margin-top: 13px !important;
+}
+
+input.dtsp-search {
+  min-width: 0px !important;
+  padding-left: 0px !important;
+  margin: 0px !important;
+}
+
+div.dtsp-verticalContainer div.dtsp-verticalPanes div.dtsp-searchPanes{
+  flex-direction: column;
+  flex-basis: 0px;
+}
+
+div.dtsp-verticalContainer div.dtsp-verticalPanes div.dtsp-searchPanes div.dtsp-searchPane{
+  flex-basis: 0px;
+}
+
+div.dtsp-verticalContainer div.container{
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 60%;
+}
+
+div.dtsp-panesContainer {
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 1em !important;
+}
+
+div.dtsp-titleRow {
+display: flex;
+flex-direction: column;
+gap: 5px;
+}
+
+div.dtsp-titleRow div.dtsp-title {
+margin-top: 0 !important;
+padding-top: 0;
+}
+
+html.dark div.dtsp-panesContainer {
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
